ArchBench.Server.CLI/ArchBenchParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\ArchBench.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class ArchBenchParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PORT=1, PATH=2, EXIT=3, STOP=4, INSTALL=5, NEWLINE=6, WHITESPACE=7, Start=8;
	public const int
		RULE_commands = 0, RULE_command = 1;
	public static readonly string[] ruleNames = {
		"commands", "command"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'exit'", "'stop'", "'install'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PORT", "PATH", "EXIT", "STOP", "INSTALL", "NEWLINE", "WHITESPACE", 
		"Start"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ArchBench.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ArchBenchParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ArchBenchParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ArchBenchParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CommandsContext : ParserRuleContext {
		public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(ArchBenchParser.NEWLINE, 0); }
		public CommandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commands; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArchBenchListener typedListener = listener as IArchBenchListener;
			if (typedListener != null) typedListener.EnterCommands(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArchBenchListener typedListener = listener as IArchBenchListener;
			if (typedListener != null) typedListener.ExitCommands(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArchBenchVisitor<TResult> typedVisitor = visitor as IArchBenchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommands(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandsContext commands() {
		CommandsContext _localctx = new CommandsContext(Context, State);
		EnterRule(_localctx, 0, RULE_commands);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 4; command();
			State = 5; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public ITerminalNode Start() { return GetToken(ArchBenchParser.Start, 0); }
		public ITerminalNode PORT() { return GetToken(ArchBenchParser.PORT, 0); }
		public ITerminalNode STOP() { return GetToken(ArchBenchParser.STOP, 0); }
		public ITerminalNode INSTALL() { return GetToken(ArchBenchParser.INSTALL, 0); }
		public ITerminalNode PATH() { return GetToken(ArchBenchParser.PATH, 0); }
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArchBenchListener typedListener = listener as IArchBenchListener;
			if (typedListener != null) typedListener.EnterCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArchBenchListener typedListener = listener as IArchBenchListener;
			if (typedListener != null) typedListener.ExitCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArchBenchVisitor<TResult> typedVisitor = visitor as IArchBenchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 12;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Start:
				EnterOuterAlt(_localctx, 1);
				{
				State = 7; Match(Start);
				State = 8; Match(PORT);
				}
				break;
			case STOP:
				EnterOuterAlt(_localctx, 2);
				{
				State = 9; Match(STOP);
				}
				break;
			case INSTALL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 10; Match(INSTALL);
				State = 11; Match(PATH);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
